<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPA Calculator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit_assignment">Edit Assignment</string>
    <string name="action_add_assignment">Add Assignment</string>
    <string name="action_add_subject">Add Subject</string>
    <string name="backslash_divider">/</string>
    <string name="percentage_symbol">%</string>

    <string name="title_activity_new_assignment">NewAssignmentActivity</string>
    <string name="title_activity_edit_assignment">EditAssignmentActivity</string>

    <string name="assignment_name_hint">Assignment Name</string>
    <string name="score_received_hint">Score Received</string>
    <string name="score_max_hint">Score Max</string>
    <string name="weightage_hint">Weightage</string>
    <string name="subject_name_hint">Subject Name</string>


    <string name="hello_world">Activity Under Construction! Shoo!</string>
    <string name="add">Add</string>
    <string name="title_activity_main_subject">MainSubjectActivity</string>
    <string name="title_activity_add_subject">AddSubjectActivity</string>

</resources>
