<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.gpacalculator.NewAssignmentActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/assignment_name"
            android:hint="@string/assignment_name_hint"
            android:inputType="text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="50dp" />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/score_received"
            android:hint="@string/score_received_hint"
            android:inputType="numberDecimal"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="130dp" />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/score_max"
            android:hint="@string/score_max_hint"
            android:inputType="numberDecimal"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="210dp" />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/weightage"
            android:hint="@string/weightage_hint"
            android:inputType="numberDecimal"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="290dp" />

    </RelativeLayout>

    <ImageButton
        android:id="@+id/add"
        android:layout_width="@dimen/round_button_diameter"
        android:layout_height="@dimen/round_button_diameter"
        android:layout_marginRight="@dimen/button_margin"
        android:layout_marginBottom="@dimen/button_margin"
        android:layout_gravity="bottom|right"
        android:background="@drawable/oval_ripple"
        android:elevation="@dimen/elevation_low"
        android:src="@drawable/ic_content_new"
        android:tint="@android:color/white"
        android:contentDescription="@string/add"
        tools:ignore="RtlCompat" />
</FrameLayout>
